[package]
name = "tracing-panic"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/LukeMathWalker/tracing-panic"
description = "A panic hook that captures panic information as a tracing event"
keywords = ["logging", "tracing", "panic", "telemetry", "hook"]
categories = ["development-tools::debugging"]

[features]
default = ["capture-backtrace"]
capture-backtrace = []

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
